# game

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  build_clean.txt  build_err.txt  build_full.txt  cmake_log.txt  imgui.ini  scene.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
ai/: README.md
ai/scripts/: aggressive_ai.py  ai_utils.py  collectible.py  commander_ai.py  default_ai.py  defensive_ai.py  engine_api.py  game_manager.py  projectile.py  smart_soldier_ai.py  spawner.py  (+2 more)
docs/: benchmarks.md
engine/: CMakeLists.txt
engine/include/engine/: engine.h
engine/include/engine/ai/: behavior_tree.h  python_bridge.h  python_engine.h
engine/include/engine/audio/: audio_engine.h  audio_mixer.h
engine/include/engine/core/: allocator.h  application.h  assert.h  async_loader.h  components.h  ecs.h  ecs_types.h  engine_context.h  event.h  gl_debug.h  job_system.h  log.h  prefab.h  random.h  resource_manager.h  scene.h  scene_serializer.h  script_system.h  string_id.h  systems.h  time.h  types.h
engine/include/engine/data/: jni_bridge.h
engine/include/engine/debug/: charts.h  console.h  debug_draw.h  debug_ui.h  engine_diagnostics.h  gpu_profiler.h  profiler.h  stat_system.h
engine/include/engine/editor/: asset_browser.h  color_picker.h  curve_editor.h  docking_layout.h  drag_drop.h  editor.h  engine_inspector.h  gizmo.h  hierarchy_panel.h  hot_reload.h  inspector_panel.h  material_editor.h  node_graph.h  particle_editor.h  prefab_system.h  scene_view.h  screen_capture.h  timeline_editor.h
engine/include/engine/game2d/: autotile.h  camera2d_controller.h  collision2d.h  ldtk_loader.h  sprite2d.h  tilemap.h
engine/include/engine/physics/: bvh.h  collision.h  obb.h  physics_world.h
engine/include/engine/platform/: input.h  window.h
engine/include/engine/renderer/: animation.h  animation_blend.h  animation_event.h  animation_ik.h  animation_layer.h  animation_root_motion.h  animation_state_machine.h  batch_renderer.h  bloom.h  buffer.h  camera.h  cascaded_shadow_map.h  font.h  fps_camera_controller.h  framebuffer.h  frustum.h  g_buffer.h  gltf_loader.h  ibl.h  instance_renderer.h  light.h  material.h  mesh.h  overdraw.h  particle.h  post_process.h  render_queue.h  renderer.h  scene_renderer.h  screen_quad.h  shader.h  shader_library.h  shaders.h  shadow_map.h  skinning_utils.h  skybox.h  sprite_batch.h  ssao.h  ssr.h  texture.h  (+2 more)
engine/include/engine/renderer/vulkan/: vulkan_bloom.h  vulkan_compute.h  vulkan_context.h  vulkan_descriptor.h  vulkan_g_buffer.h  vulkan_ibl.h  vulkan_lighting_pass.h  vulkan_material.h  vulkan_mesh.h  vulkan_post_process.h  vulkan_scene_renderer.h  vulkan_screen_quad.h  vulkan_shader.h  vulkan_shadow_map.h  vulkan_skybox.h  vulkan_ssao.h  vulkan_ssr.h  vulkan_texture.h
engine/include/engine/rhi/: rhi.h  rhi_buffer.h  rhi_device.h  rhi_framebuffer.h  rhi_pipeline_state.h  rhi_shader.h  rhi_texture.h  rhi_types.h
engine/include/engine/rhi/opengl/: gl_buffer.h  gl_device.h  gl_framebuffer.h  gl_shader.h  gl_texture.h
engine/include/engine/rhi/vulkan/: vk_buffer.h  vk_device.h  vk_framebuffer.h  vk_shader.h  vk_texture.h
engine/src/ai/: behavior_tree.cpp  python_bridge.cpp  python_engine.cpp
engine/src/audio/: audio_engine.cpp  audio_mixer.cpp
engine/src/core/: application.cpp  async_loader.cpp  ecs.cpp  engine_context.cpp  job_system.cpp  log.cpp  prefab.cpp  resource_manager.cpp  scene.cpp  scene_serializer.cpp  script_system.cpp  time.cpp
engine/src/data/: jni_bridge.cpp
engine/src/debug/: charts.cpp  console.cpp  debug_draw.cpp  debug_ui.cpp  engine_diagnostics.cpp  gpu_profiler.cpp  profiler.cpp  stat_system.cpp
engine/src/editor/: asset_browser.cpp  color_picker.cpp  curve_editor.cpp  docking_layout.cpp  drag_drop.cpp  editor.cpp  engine_inspector.cpp  gizmo.cpp  hierarchy_panel.cpp  hot_reload.cpp  inspector_panel.cpp  material_editor.cpp  node_graph.cpp  particle_editor.cpp  prefab_system.cpp  scene_view.cpp  screen_capture.cpp  timeline_editor.cpp
engine/src/game2d/: camera2d_controller.cpp  ldtk_loader.cpp  sprite2d.cpp  tilemap.cpp
engine/src/physics/: bvh.cpp  collision.cpp  obb.cpp  physics_world.cpp
engine/src/platform/: input.cpp  window.cpp
engine/src/renderer/: animation.cpp  animation_blend.cpp  animation_event.cpp  animation_ik.cpp  animation_layer.cpp  animation_root_motion.cpp  animation_state_machine.cpp  batch_renderer.cpp  bloom.cpp  buffer.cpp  camera.cpp  cascaded_shadow_map.cpp  font.cpp  fps_camera_controller.cpp  framebuffer.cpp  frustum.cpp  g_buffer.cpp  gltf_loader.cpp  ibl.cpp  instance_renderer.cpp  material.cpp  mesh.cpp  overdraw.cpp  particle.cpp  post_process.cpp  render_queue.cpp  renderer.cpp  scene_renderer.cpp  screen_quad.cpp  shader.cpp  shader_library.cpp  shadow_map.cpp  skinning_utils.cpp  skybox.cpp  sprite_batch.cpp  ssao.cpp  ssr.cpp  stb_image_impl.cpp  texture.cpp  viewport_modes.cpp  (+1 more)
engine/src/renderer/vulkan/: vulkan_bloom.cpp  vulkan_compute.cpp  vulkan_context.cpp  vulkan_descriptor.cpp  vulkan_g_buffer.cpp  vulkan_ibl.cpp  vulkan_lighting_pass.cpp  vulkan_material.cpp  vulkan_mesh.cpp  vulkan_post_process.cpp  vulkan_scene_renderer.cpp  vulkan_screen_quad.cpp  vulkan_shader.cpp  vulkan_shadow_map.cpp  vulkan_skybox.cpp  vulkan_ssao.cpp  vulkan_ssr.cpp  vulkan_texture.cpp
engine/src/rhi/: rhi_device.cpp
engine/src/rhi/opengl/: gl_buffer.cpp  gl_device.cpp  gl_framebuffer.cpp  gl_shader.cpp  gl_texture.cpp
engine/src/rhi/vulkan/: vk_buffer.cpp  vk_device.cpp  vk_framebuffer.cpp  vk_shader.cpp  vk_texture.cpp
game/: CMakeLists.txt
game/include/game/: building.h  combat.h  dialogue.h  farming.h  game_map.h  interaction_system.h  inventory.h  npc_system.h  player_controller.h  time_system.h  zombie.h
game/src/: building.cpp  combat.cpp  dialogue.cpp  farming.cpp  game_map.cpp  interaction_system.cpp  inventory.cpp  npc_system.cpp  player_controller.cpp  time_system.cpp  zombie.cpp
sandbox/: CMakeLists.txt
tests/: CMakeLists.txt  test_ecs.cpp  test_types.cpp
(+8 files in other folders)
